Switch to system fonts and improve API usage
Replaced Google Fonts with system fonts for better performance in index.html and index.css. Updated API request signatures throughout the client to use a more consistent parameter order. Improved EditToolDialog robustness for missing tool data. Adjusted server middleware order for correct static file serving and enhanced security headers for development. Added several backup and test files for development and debugging.

--- a/client/index.html
+++ b/client/index.html
@@ -8,9 +8,7 @@
     <meta property="og:title" content="TechStack Explorer - AI Tool Compatibility Matrix" />
     <meta property="og:description" content="Discover AI coding tool compatibility and build better tech stacks with our interactive matrix database." />
     <meta property="og:type" content="website" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Using system fonts instead of Google Fonts for better performance -->
   </head>
   <body>
     <div id="root"></div>
